Potential fix for image not showing up on Heroky...

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,7 +16,7 @@
 body {
   padding-top: 60px;
   /*background-image: url("http://static.squarespace.com/static/53c827a3e4b00a63fc062eb5/t/53e162a3e4b08ac0a8ecac68/1407279779644/DSC07168.jpg");*/
-  background-image: url('background.jpg');
+  background-image: image-url('background.jpg');
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
